--- a/flaskTestTool/requirements.txt
+++ b/flaskTestTool/requirements.txt
@@ -27,6 +27,7 @@ Flask-SQLAlchemy==3.1.1
 fonttools==4.56.0
 fqdn==1.5.1
 greenlet==3.1.1
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
