--- a/flaskTestTool/requirements.txt
+++ b/flaskTestTool/requirements.txt
@@ -24,6 +24,7 @@ executing==2.2.0
 fastjsonschema==2.21.1
 Flask==3.1.0
 Flask-SQLAlchemy==3.1.1
+flask-cors==5.0.1
 fonttools==4.56.0
 fqdn==1.5.1
 greenlet==3.1.1
